[gd_scene load_steps=3 format=3 uid="uid://cf6uveh0t8ujf"]

[ext_resource type="Script" uid="uid://dp4hxvc226m40" path="res://scenes/vault/SelectItemType.gd" id="1_6atli"]
[ext_resource type="StyleBox" uid="uid://dqccaput2wseh" path="res://ui/PanelTheme.tres" id="1_hyf4s"]

[node name="SelectItemType" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6atli")

[node name="HeaderBar" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.15
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="HeaderBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.5
offset_top = -68.5
offset_right = 480.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Add New Vault Item"

[node name="SubtitleLabel" type="Label" parent="HeaderBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -402.0
offset_top = -69.0
offset_right = 402.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Choose the type of item to create"

[node name="ContentArea" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.85
offset_bottom = 40.0

[node name="TypeButtonsPanel" type="Control" parent="ContentArea"]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.1
anchor_right = 0.75
anchor_bottom = 0.9
offset_bottom = 0.4000244

[node name="TypeButtonsVBox" type="VBoxContainer" parent="ContentArea/TypeButtonsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="LoginButton" type="Button" parent="ContentArea/TypeButtonsPanel/TypeButtonsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_hyf4s")
text = "Login"

[node name="CreditCardButton" type="Button" parent="ContentArea/TypeButtonsPanel/TypeButtonsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_hyf4s")
text = "Credit Card"

[node name="IdentityButton" type="Button" parent="ContentArea/TypeButtonsPanel/TypeButtonsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_hyf4s")
text = "Identity"

[node name="SecureNoteButton" type="Button" parent="ContentArea/TypeButtonsPanel/TypeButtonsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_hyf4s")
text = "Secure Note"

[node name="BottomBar" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("1_hyf4s")
text = "Back"
